{
    "name": "CameraControlActions",
    "maps": [
        {
            "name": "Camera",
            "id": "bb91a81c-d839-485c-b314-ede61dec5c44",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "d253ba31-0fc7-4460-bab2-76b86da4de56",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RotateCamera",
                    "type": "Value",
                    "id": "56eb1e5d-4277-4d18-8d43-fb052bee3e3a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ZoomCamera",
                    "type": "Value",
                    "id": "52649d78-848c-486d-af5a-868f17c70814",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "14440206-745c-42fb-bc2e-a9a68254b2f0",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "73de8bcf-8252-4a6e-aba5-e7cee4733169",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "cfa3e793-300b-49c9-a821-34e10b0218f9",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "b7a20360-3411-41fa-9989-f6e8748721b7",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "b5efca98-29ef-48dc-b858-83a745ebc6c7",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "4fe92e47-5af3-4e99-91d2-5c851969411a",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e1ad949e-36ce-4599-bb9b-4519f0067a83",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ZoomCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}